fix: table width on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -455,6 +455,6 @@ legend {
 
     #standings-table, #scorer-table {
         padding: 10px 5px;
-        width: 90%;
+        width: 95%;
     }
 }
